fix nabber on mobile view

--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -196,6 +196,7 @@
 		width: 50%;
 		margin-left: auto;
 		margin-right: auto;
+
 		.wrapper {
 			position: relative;
 		}
@@ -203,6 +204,7 @@
 		@media screen and (max-width: $mobile-break-point) {
 			width: 100vw;
 			margin: 0;
+			margin-top: 50px;
 		}
 	}
 
